--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>导航主页</h1>
-            <p class="subtitle">请选择您要访问的页面</p>
+            <h1>近现代史纲要测试题</h1>
+            <p class="subtitle">请选择您要做的章节</p>
         </header>
 
         <div class="menu">
@@ -151,7 +151,7 @@
         </div>
 
         <footer>
-            <p>© 2023 版权所有 | 设计用于导航到8个不同页面</p>
+            <p> 设计用于导航到8个不同页面章节</p>
         </footer>
     </div>
 </body>
