--- a/1.html
+++ b/1.html
@@ -397,6 +397,83 @@
     answer: 1
   }
 ];
+    // 你可以继续添加更多题目
+const judgeQuiz = [
+  {
+    question: "1. 西方殖民主义势力来到东方，是为了使东方国家成为独立的资本主义国家。",
+    answer: false
+  },
+  {
+    question: "2. 近代中国诞生的新的被压迫阶级是农民阶级。",
+    answer: false
+  },
+  {
+    question: "3. 近代中国社会的主要矛盾是农民阶级与地主阶级的矛盾，工人阶级与资产阶级的矛盾。",
+    answer: false
+  },
+  {
+    question: "4. 近代中国社会最主要的矛盾是封建主义与人民大众的矛盾。",
+    answer: false
+  },
+  {
+    question: "5. 只有通过革命获得民族独立和人民解放以后，中国人民才可能集中力量进行现代化建设实现国家富强和人民富裕。",
+    answer: true
+  },
+  {
+    question: "6. 近代中国是一个半殖民地半封建社会，近代中国的所有地区，在所有时期都是半殖民地。",
+    answer: false
+  },
+  {
+    question: "7. 资本-帝国主义对中国的侵略，首先和主要的是军事侵略。",
+    answer: true
+  },
+  {
+    question: "8. 1842年，英国强迫清政府签订《南京条约》，把九龙半岛割让给英国。",
+    answer: false
+  },
+  {
+    question: "9. 近代中国反侵略战争失败主要由于中国社会制度的腐败和经济技术的落后。",
+    answer: true
+  },
+  {
+    question: "10. 帝国主义列强对中国的争夺和瓜分的图谋，在中法战争爆发后达到高潮。",
+    answer: false
+  },
+  {
+    question: "11. 鸦片战争开放广州、厦门、福州、宁波、上海等五个港口城市为通商口岸，打破了清政府的闭关政策。",
+    answer: true
+  },
+  {
+    question: "12. 中国的工人阶级与中国的资产阶级同时产生。",
+    answer: false
+  },
+  {
+    question: "13. 中国的民族资本主义经济始终不在中国社会经济中占主导地位。",
+    answer: true
+  },
+  {
+    question: "14. 外国资本—帝国主义侵略中国的目的是想使中国变成一个资本主义的国家。",
+    answer: false
+  },
+  {
+    question: "15. 外国资本—帝国主义对中国的侵略客观上促进了中国资本主义的发展。",
+    answer: true
+  },
+  {
+    question: "16. 近代以来中华民族面临的两大历史任务是：争取民族独立、人民解放和实现国家富强、人民富裕。",
+    answer: true
+  },
+  {
+    question: "17. 帝国主义列强对中国进行文化渗透的目的是宣扬殖民主义奴化思想，麻醉中国人民的精神，摧毁中国人民的民族自尊心和自信心。",
+    answer: true
+  },
+  {
+    question: "18、中国近代史上英国在中国上海设立了第一块租界。 ",
+    answer: true
+  }
+];
+
+
 const multiQuiz = [
   {
     question: "1. 近代中国半殖民地半封建社会的主要矛盾是：",
@@ -537,81 +614,6 @@ const multiQuiz = [
     answer: [0, 1] // AB
   }
 ];
-    // 你可以继续添加更多题目
-const judgeQuiz = [
-  {
-    question: "1. 西方殖民主义势力来到东方，是为了使东方国家成为独立的资本主义国家。",
-    answer: false
-  },
-  {
-    question: "2. 近代中国诞生的新的被压迫阶级是农民阶级。",
-    answer: false
-  },
-  {
-    question: "3. 近代中国社会的主要矛盾是农民阶级与地主阶级的矛盾，工人阶级与资产阶级的矛盾。",
-    answer: false
-  },
-  {
-    question: "4. 近代中国社会最主要的矛盾是封建主义与人民大众的矛盾。",
-    answer: false
-  },
-  {
-    question: "5. 只有通过革命获得民族独立和人民解放以后，中国人民才可能集中力量进行现代化建设实现国家富强和人民富裕。",
-    answer: true
-  },
-  {
-    question: "6. 近代中国是一个半殖民地半封建社会，近代中国的所有地区，在所有时期都是半殖民地。",
-    answer: false
-  },
-  {
-    question: "7. 资本-帝国主义对中国的侵略，首先和主要的是军事侵略。",
-    answer: true
-  },
-  {
-    question: "8. 1842年，英国强迫清政府签订《南京条约》，把九龙半岛割让给英国。",
-    answer: false
-  },
-  {
-    question: "9. 近代中国反侵略战争失败主要由于中国社会制度的腐败和经济技术的落后。",
-    answer: true
-  },
-  {
-    question: "10. 帝国主义列强对中国的争夺和瓜分的图谋，在中法战争爆发后达到高潮。",
-    answer: false
-  },
-  {
-    question: "11. 鸦片战争开放广州、厦门、福州、宁波、上海等五个港口城市为通商口岸，打破了清政府的闭关政策。",
-    answer: true
-  },
-  {
-    question: "12. 中国的工人阶级与中国的资产阶级同时产生。",
-    answer: false
-  },
-  {
-    question: "13. 中国的民族资本主义经济始终不在中国社会经济中占主导地位。",
-    answer: true
-  },
-  {
-    question: "14. 外国资本—帝国主义侵略中国的目的是想使中国变成一个资本主义的国家。",
-    answer: false
-  },
-  {
-    question: "15. 外国资本—帝国主义对中国的侵略客观上促进了中国资本主义的发展。",
-    answer: true
-  },
-  {
-    question: "16. 近代以来中华民族面临的两大历史任务是：争取民族独立、人民解放和实现国家富强、人民富裕。",
-    answer: true
-  },
-  {
-    question: "17. 帝国主义列强对中国进行文化渗透的目的是宣扬殖民主义奴化思想，麻醉中国人民的精神，摧毁中国人民的民族自尊心和自信心。",
-    answer: true
-  },
-  {
-    question: "18、中国近代史上英国在中国上海设立了第一块租界。 ",
-    answer: true
-  }
-];
 
   let currentType = 'single'; // 'single', 'multi', 'judge'
   let current = 0;
@@ -750,21 +752,21 @@ const judgeQuiz = [
         current++;
         renderQuestion();
       } else {
-        currentType = 'multi';
-        current = 0;
-        renderQuestion();
-      }
-    } else if (currentType === 'multi') {
-      if (current < multiQuiz.length - 1) {
-        current++;
-        renderQuestion();
-      } else {
-        currentType = 'judge';
+        currentType = 'judge'; // 先切换到判断题
         current = 0;
         renderQuestion();
       }
     } else if (currentType === 'judge') {
       if (current < judgeQuiz.length - 1) {
+        current++;
+        renderQuestion();
+      } else {
+        currentType = 'multi'; // 判断题做完再到多选题
+        current = 0;
+        renderQuestion();
+      }
+    } else if (currentType === 'multi') {
+      if (current < multiQuiz.length - 1) {
         current++;
         renderQuestion();
       }
@@ -775,13 +777,13 @@ const judgeQuiz = [
     if (current > 0) {
       current--;
       renderQuestion();
-    } else if (currentType === 'multi') {
+    } else if (currentType === 'judge') {
       currentType = 'single';
       current = quiz.length - 1;
       renderQuestion();
-    } else if (currentType === 'judge') {
-      currentType = 'multi';
-      current = multiQuiz.length - 1;
+    } else if (currentType === 'multi') {
+      currentType = 'judge';
+      current = judgeQuiz.length - 1;
       renderQuestion();
     }
   }
