--- a/2.html
+++ b/2.html
@@ -404,7 +404,7 @@ const quiz = [
       "C、\"中体西用\"思想的提出",
       "D、\"明定国是\"诏书的颁布"
     ],
-    answer: 1  // B、“公车上书”
+    answer: 3  // “D、\"明定国是\"诏书的颁布”
   },
   {
     question: "34、维新运动兴起的时代背景是(    )",
@@ -477,7 +477,7 @@ const multiQuiz = [
       "C、制定了比较完整的资产阶级民主革命纲领",
       "D、对封建王朝的打击空前严重"
     ],
-    answer: [0, 1, 3] // A、B、D
+    answer: [0, 2, 3] // A、C、D
   },
   {
     question: "5、太平天国起义的历史意义是（     ）",
@@ -859,21 +859,21 @@ const judgeQuiz = [
         current++;
         renderQuestion();
       } else {
-        currentType = 'multi';
-        current = 0;
-        renderQuestion();
-      }
-    } else if (currentType === 'multi') {
-      if (current < multiQuiz.length - 1) {
-        current++;
-        renderQuestion();
-      } else {
-        currentType = 'judge';
+        currentType = 'judge'; // 先切换到判断题
         current = 0;
         renderQuestion();
       }
     } else if (currentType === 'judge') {
       if (current < judgeQuiz.length - 1) {
+        current++;
+        renderQuestion();
+      } else {
+        currentType = 'multi'; // 判断题做完再到多选题
+        current = 0;
+        renderQuestion();
+      }
+    } else if (currentType === 'multi') {
+      if (current < multiQuiz.length - 1) {
         current++;
         renderQuestion();
       }
@@ -884,17 +884,16 @@ const judgeQuiz = [
     if (current > 0) {
       current--;
       renderQuestion();
-    } else if (currentType === 'multi') {
+    } else if (currentType === 'judge') {
       currentType = 'single';
       current = quiz.length - 1;
       renderQuestion();
-    } else if (currentType === 'judge') {
-      currentType = 'multi';
-      current = multiQuiz.length - 1;
+    } else if (currentType === 'multi') {
+      currentType = 'judge';
+      current = judgeQuiz.length - 1;
       renderQuestion();
     }
   }
-
   renderQuestion();
 </script>
 
