--- a/7.html
+++ b/7.html
@@ -84,7 +84,7 @@ const quiz = [
       "C、《井冈山土地法》",
       "D、《关于清算、减租及土地问题的指示》"
     ],
-    answer: 0
+    answer: 3
   },
   {
     question: "1948年10月2日，刘少奇同志在同华北记者团谈话时讲了一个希腊神话故事：巨人安泰是地神之子，他在同对手搏斗时，只要身不离地，就能从大地母亲那里不断吸取力量，所向无敌；但是，一旦他离开地面，便变得毫无力量。他的对手赫拉克勒斯发现了他的这一特征，把他举到半空中扼死。刘少奇借用这一神话故事，表明我们的党始终要",
@@ -237,7 +237,7 @@ const quiz = [
     answer: 2
   },
   {
-    question: "抗日战争胜利后，美蒋发动的全面内战开始于国民党军队进攻",
+    question: "17.抗日战争胜利后，美蒋发动的全面内战开始于国民党军队进攻",
     options: [
       "A、中原解放区",
       "B、陕甘宁解放区",
@@ -247,7 +247,7 @@ const quiz = [
     answer: 0
   },
   {
-    question: "中国民主革命的基本问题是",
+    question: "18.中国民主革命的基本问题是",
     options: [
       "A、武装斗争问题",
       "B、党的建设问题",
@@ -257,14 +257,14 @@ const quiz = [
     answer: 3
   },
   {
-    question: "1945年，双十协定确认和平建国的基本方针，同意",
+    question: "19.1945年，双十协定确认和平建国的基本方针，同意",
     options: [
       "A、和平、民主、团结",
       "B、长期合作，坚决避免内战",
       "C、巩固国内和平，实现民主改革",
       "D、独立、自由、和平"
     ],
-    answer: 0
+    answer: 1
   },
   {
     question: "20.1949年1月，李济深、沈钧儒等著名民主人士55人联合发表，表示愿意接受中国共产党的领导的是",
@@ -314,7 +314,7 @@ const quiz = [
       "C、《中国土地法大纲》",
       "D、《关于清算、减租及土地问题的指示》"
     ],
-    answer: 1
+    answer: 3
   },
   {
     question: "25. 标志着中国的新型政党制度——中国领导的多党合作和政治协商制度的确立的事件是：（    ）",
@@ -387,7 +387,7 @@ const multiQuiz = [
       "C、团结",
       "D、自由"
     ],
-    answer: [0,1,2,3] // 通常是四项都提及，这里按题意你可调整
+    answer: [0,1,2] 
   },
   {
     question: "2、抗战结束后，蒋介石愿与中国共产党进行和平谈判，其目的是（    ）",
@@ -407,7 +407,7 @@ const multiQuiz = [
       "C、在国统区开辟第二条战线",
       "D、在解放区开展土地改革运动"
     ],
-    answer: [0,1,2,3]
+    answer: [0,1]
   },
   {
     question: "4、解放战争时期，在国民党统治区形成了以学生运动为先导的人民民主运动，成为配合人民解放战争的第二条战线。第二条战线形成的原因是（  ）",
@@ -437,7 +437,7 @@ const multiQuiz = [
       "C、对中原解放区的重点进攻",
       "D、对山东解放区的重点进攻"
     ],
-    answer: [0]
+    answer: [0,3]
   },
   {
     question: "7、1948年9月12日至1949年1月31日，中国人民解放军发动的三大战略决战是（  ）。",
@@ -467,7 +467,7 @@ const multiQuiz = [
       "C、强迫了国民党统治集团履行政治协议",
       "D、通过这次会议，各界群众懂得了什么人应当对战争承担责任"
     ],
-    answer: [0,1,3]
+    answer: [1,3]
   },
   {
     question: "10、1949年9月21日，中国人民政治协商会议第一届全体会议在北平中南海怀仁堂隆重开幕，参加会议的代表共662人，代表主要来自（   ）",
@@ -497,7 +497,7 @@ const multiQuiz = [
       "C、《中国土地法大纲》",
       "D、《五四指示》"
     ],
-    answer: [1,2]
+    answer: [2,3]
   },
   {
     question: "13、为了打退国民党对解放区的军事进攻，中共中央作出的决定是（  ）",
@@ -507,7 +507,7 @@ const multiQuiz = [
       "C、在党的领导下建立最广泛的人民民主统一战线",
       "D、必须采取集中优势兵力、各个歼灭敌人的作战原则"
     ],
-    answer: [2,3]
+    answer: [0,1,2,3]
   },
   {
     question: "14、抗日战争胜利后，国民党的反共方针得到了美国政府的支持。美国在中国的短期目标是（   ）",
@@ -527,7 +527,7 @@ const multiQuiz = [
       "C、王若飞",
       "D、刘少奇"
     ],
-    answer: [1]
+    answer: [0,1,2]
   },
   {
     question: "16、抗日战争胜利后，第三条道路的主张是（   ）",
@@ -557,7 +557,7 @@ const multiQuiz = [
       "C、张澜",
       "D、黄炎培"
     ],
-    answer: [0,1,2,3]
+    answer: [0,1,2]
   },
   {
     question: "19、中国新民主主义革命胜利的主要原因是（     ）。",
@@ -577,7 +577,7 @@ const multiQuiz = [
       "C、中国革命的基本问题是农民问题",
       "D、革命的中心任务和最高形式是武装夺取政权"
     ],
-    answer: [0,1,2,3]
+    answer: [0,1,2]
   },
   {
     question: "21、解放战争时期，在国民党统治区形成了配合人民解放战争的第二条战线，下列关于第二条战线的表述正确的是（     ）",
@@ -594,7 +594,7 @@ const multiQuiz = [
 const judgeQuiz = [
   {
     question: "1、1946年5月4日，中共中央发出《五四指示》，决定将党在抗日战争时期实行的减租减息政策改变为实现“耕者有其田”的政策。(     )",
-    answer: false
+    answer: true
   },
   {
     question: "2、解放战争时期，在解放区进行的土地制度改革，从根本上摧毁中国封建制度根基，为打败蒋介石、建立新中国奠定了深厚的群众基础。(     )",
@@ -682,11 +682,11 @@ const judgeQuiz = [
   },
   {
     question: "23、抗日战争后的政治形势，总的说来，是不利于中国人民实现和平建国的。(   )",
-    answer: true
+    answer: false
   },
   {
     question: "24、1949年，完成创建新中国的任务，是由中国人民政治协商会议来承担的。(     )",
-    answer: false
+    answer: true
   }
 ];
 
@@ -829,21 +829,21 @@ const judgeQuiz = [
         current++;
         renderQuestion();
       } else {
-        currentType = 'multi';
-        current = 0;
-        renderQuestion();
-      }
-    } else if (currentType === 'multi') {
-      if (current < multiQuiz.length - 1) {
-        current++;
-        renderQuestion();
-      } else {
-        currentType = 'judge';
+        currentType = 'judge'; // 先切换到判断题
         current = 0;
         renderQuestion();
       }
     } else if (currentType === 'judge') {
       if (current < judgeQuiz.length - 1) {
+        current++;
+        renderQuestion();
+      } else {
+        currentType = 'multi'; // 判断题做完再到多选题
+        current = 0;
+        renderQuestion();
+      }
+    } else if (currentType === 'multi') {
+      if (current < multiQuiz.length - 1) {
         current++;
         renderQuestion();
       }
@@ -854,13 +854,13 @@ const judgeQuiz = [
     if (current > 0) {
       current--;
       renderQuestion();
-    } else if (currentType === 'multi') {
+    } else if (currentType === 'judge') {
       currentType = 'single';
       current = quiz.length - 1;
       renderQuestion();
-    } else if (currentType === 'judge') {
-      currentType = 'multi';
-      current = multiQuiz.length - 1;
+    } else if (currentType === 'multi') {
+      currentType = 'judge';
+      current = judgeQuiz.length - 1;
       renderQuestion();
     }
   }
