--- a/4.html
+++ b/4.html
@@ -138,7 +138,7 @@ const quiz = [
   {
     question: "12. 中国近代史上，共和政体确立的标志是：",
     options: ["A. 湖北军政府成立", "B. 南京临时政府成立", "C. 清帝退位", "D. 袁世凯当选为临时大总统"],
-    answer: 2
+    answer: 1
   },
   {
     question: "13. 第一次国共合作实现的标志是：",
@@ -201,7 +201,7 @@ const quiz = [
     answer: 3
   },
   {
-    question: "20. 1927年汪精卫制造的屠杀事件是：",
+    question: "20.1927年，汪精卫在武汉制造了屠杀共产党人和革命群众的（   ）",
     options: ["A. 中山舰事件", "B. 整理党务案", "C. 四一二事变", "D. 七一五事变"],
     answer: 3
   }
@@ -346,6 +346,9 @@ const multiQuiz = [
     ],
     answer: [0, 1, 3]
   },
+
+
+
   {
     question: "4、十月革命推动中国的先进分子从资产阶级民主主义转向社会主义的原因是：（   ）",
     options: [
@@ -354,8 +357,11 @@ const multiQuiz = [
       "C、十月革命中工人和士兵的广泛发动并由此赢得胜利的事实昭示中国先进分子以新的方法开展革命",
       "D、十月革命一声炮响，给我们送来了马克思列宁主义"
     ],
-    answer: [0, 1, 2, 3]
+    answer: [0, 1, 2]//不确定，多种结果，可能ABCD
   },
+
+
+
   {
     question: "5、下列人物中参加过中共一大的有(     )",
     options: [
@@ -484,7 +490,7 @@ const multiQuiz = [
       "C、选举产生了由陈独秀、张国焘、李达组成的党的领导机构",
       "D、正式宣告了中国共产党的成立"
     ],
-    answer: [0, 1, 3]
+    answer: [0, 1, 2, 3]
   },
   {
     question: "18、1922 年 7 月召开的中国共产党第二次全国代表大会的主要内容有（  ）",
@@ -514,7 +520,7 @@ const multiQuiz = [
       "C、是反帝反封建的革命运动",
       "D、具有初步共产主义思想的知识分子起了领导作用"
     ],
-    answer: [0, 1, 2, 3]
+    answer: [0, 1,  3]
   },
   {
     question: "21、第一次国共合作得以实现的条件有（    ）",
@@ -603,7 +609,7 @@ const judgeQuiz = [
   },
   {
     question: "19、大革命时提出反对帝国主义、反对军阀口号的是国民党。",
-    answer: true
+    answer: false
   },
   {
     question: "20、第一次国共合作后的大革命是中国历史上空前广泛而深刻的群众运动。",
@@ -754,21 +760,21 @@ const judgeQuiz = [
         current++;
         renderQuestion();
       } else {
-        currentType = 'multi';
-        current = 0;
-        renderQuestion();
-      }
-    } else if (currentType === 'multi') {
-      if (current < multiQuiz.length - 1) {
-        current++;
-        renderQuestion();
-      } else {
-        currentType = 'judge';
+        currentType = 'judge'; // 先切换到判断题
         current = 0;
         renderQuestion();
       }
     } else if (currentType === 'judge') {
       if (current < judgeQuiz.length - 1) {
+        current++;
+        renderQuestion();
+      } else {
+        currentType = 'multi'; // 判断题做完再到多选题
+        current = 0;
+        renderQuestion();
+      }
+    } else if (currentType === 'multi') {
+      if (current < multiQuiz.length - 1) {
         current++;
         renderQuestion();
       }
@@ -779,17 +785,16 @@ const judgeQuiz = [
     if (current > 0) {
       current--;
       renderQuestion();
-    } else if (currentType === 'multi') {
+    } else if (currentType === 'judge') {
       currentType = 'single';
       current = quiz.length - 1;
       renderQuestion();
-    } else if (currentType === 'judge') {
-      currentType = 'multi';
-      current = multiQuiz.length - 1;
+    } else if (currentType === 'multi') {
+      currentType = 'judge';
+      current = judgeQuiz.length - 1;
       renderQuestion();
     }
   }
-
   renderQuestion();
 </script>
 
