--- a/5.html
+++ b/5.html
@@ -171,22 +171,22 @@ const quiz = [
     answer: 1
   },
   {
-    question: "14. 1927年中共在汉口召开的紧急会议是：",
+    question: "14. 在大革命失败的危急时刻，1927年8月，中共在汉口秘密召开的紧急会议是 (    )。",
     options: ["A. 八七会议", "B. 古田会议", "C. 遵义会议", "D. 洛川会议"],
     answer: 0
   },
   {
-    question: "15. 中共八七会议确定的方针是：",
+    question: "15. 中共八七会议在大革命失败的危急关头确定的方针是(   )",
     options: ["A. 推翻北洋军阀黑暗统治", "B. 开辟农村革命根据地", "C. 开展土地革命和武装斗争", "D. 建立工农民主统一战线"],
     answer: 2
   },
   {
-    question: "16. 毛泽东率领秋收起义部队创建的根据地是：",
+    question: "16. 1927年10月，毛泽东率领秋收起义部队开辟的创建农村革命根据地是(   )。	",
     options: ["A. 井冈山革命根据地", "B. 湘鄂西革命根据地", "C. 闽浙赣革命根据地", "D. 左右江革命根据地"],
     answer: 0
   },
   {
-    question: "17. 党内屡次出现严重'左'倾教条主义错误的主要原因是：",
+    question: "20世纪30年代前期、中期，中国共产党内屡次出现严重的'左'倾教条主义错误，主要原因是（    ）",
     options: [
       "A. 八七会议后党内浓厚的'左'倾情绪未清理",
       "B. 共产国际错误干预",
@@ -196,7 +196,7 @@ const quiz = [
     answer: 3
   },
   {
-    question: "18. 红军三大主力会师时，不包括哪一支？",
+    question: "18.1936年10月，在甘肃会宁、静宁将台堡胜利会师红军三大主力没有（   ）。",
     options: ["A. 红一方面军", "B. 红二方面军", "C. 红十五军团", "D. 红四方面军"],
     answer: 2
   },
@@ -215,125 +215,179 @@ const quiz = [
     ],
     answer: 2
   },
-  // ...（下略17道题，如需继续我可以立即补上）
-];
-quiz.push(
+
   {
-    question: "21. 《中国的红色政权为什么能够存在？》是为了解释哪一问题而写的？",
+    question: "21、1935年12月，毛泽东作了（    ）的报告，系统解决中国共产党的政治路线上的问题。",
     options: [
-      "A. 红军是无敌的",
-      "B. 为什么城市不如农村革命力量强大",
-      "C. 井冈山根据地发生的革命斗争",
-      "D. 红色政权在白色政权包围下为什么能够长期存在"
+      "A、《发对本本主义》",
+      "B、《论反对日本帝国主义的策略》",
+      "C、《中国革命战争的战略问题》",
+      "D、《矛盾论》"
     ],
-    answer: 3
-  },
-  {
-    question: "22. 毛泽东指出“没有文化的军队是一支愚蠢的军队”是在：",
-    options: ["A. 《星星之火，可以燎原》", "B. 《井冈山的斗争》", "C. 《反对本本主义》", "D. 古田会议决议"],
-    answer: 3
-  },
-  {
-    question: "23. 毛泽东在古田会议上提出：",
-    options: [
-      "A. 没有调查就没有发言权",
-      "B. 枪杆子里面出政权",
-      "C. 红军是一个执行革命的政治任务的武装集团",
-      "D. 没有文化的军队是一支愚蠢的军队"
-    ],
-    answer: 2
-  },
-  {
-    question: "24. 下列不属于红军三大主力的是：",
-    options: ["A. 红一方面军", "B. 红二方面军", "C. 红三方面军", "D. 红四方面军"],
-    answer: 2
-  },
-  {
-    question: "25. 遵义会议确立了以谁为代表的新的中央领导？",
-    options: ["A. 毛泽东", "B. 张闻天", "C. 王稼祥", "D. 博古"],
-    answer: 0
-  },
-  {
-    question: "26. 下列对土地革命时期“左”倾错误的认识错误的是：",
-    options: [
-      "A. 把斗争的锋芒主要指向富农",
-      "B. 没收富农土地，打击中农",
-      "C. 完全照搬苏俄经验",
-      "D. 批判右倾，推动农村根据地发展"
-    ],
-    answer: 3
-  },
-  {
-    question: "27. 中共土地革命战争时期实行的土地政策是：",
-    options: ["A. 耕者有其田", "B. 发展资本主义", "C. 实行按人口分地", "D. 没收地主土地"],
-    answer: 3
-  },
-  {
-    question: "28. 国共十年对峙时期的主战场是：",
-    options: ["A. 城市", "B. 海外", "C. 工矿", "D. 农村"],
-    answer: 3
-  },
-  {
-    question: "29. 中国革命的根本问题是：",
-    options: [
-      "A. 政治问题",
-      "B. 经济问题",
-      "C. 军事问题",
-      "D. 农民问题"
-    ],
-    answer: 3
-  },
-  {
-    question: "30. 毛泽东在《中国的红色政权为什么能够存在》一文中指出：",
-    options: [
-      "A. 红军必须走群众路线",
-      "B. 中国有广大民众支持革命",
-      "C. 共产党是先进力量",
-      "D. 革命的根据地能长期存在"
-    ],
-    answer: 3
-  },
-  {
-    question: "31. 毛泽东首次系统论述农村包围城市道路的著作是：",
-    options: [
-      "A. 《井冈山的斗争》",
-      "B. 《中国的红色政权为什么能够存在》",
-      "C. 《星星之火，可以燎原》",
-      "D. 《反对本本主义》"
-    ],
-    answer: 2
-  },
-  {
-    question: "32. 土地革命时期党最早领导的农民武装起义是：",
-    options: ["A. 南昌起义", "B. 秋收起义", "C. 黄麻起义", "D. 广州起义"],
-    answer: 2
-  },
-  {
-    question: "33. 毛泽东提出“从群众中来，到群众中去”的文章是：",
-    options: ["A. 《反对本本主义》", "B. 《整顿党的作风》", "C. 《改造我们的学习》", "D. 《星星之火，可以燎原》"],
-    answer: 0
-  },
-  {
-    question: "34. 土地革命时期中共开展土地革命的核心问题是：",
-    options: ["A. 没收一切土地", "B. 平分土地", "C. 实现土地公有", "D. 没收地主土地"],
-    answer: 3
-  },
-  {
-    question: "35. 第一次明确提出“工农武装割据”思想的文章是：",
-    options: ["A. 《中国的红色政权为什么能够存在》", "B. 《井冈山的斗争》", "C. 《星星之火，可以燎原》", "D. 《反对本本主义》"],
     answer: 1
   },
   {
-    question: "36. 井冈山根据地创建的时间是：",
-    options: ["A. 1927年", "B. 1928年", "C. 1929年", "D. 1930年"],
+    question: "22、从1927年到1930年上半年，中国共产党领导的农村革命根据地和红军得到了迅速发展，其根本措施是（     ）。",
+    options: [
+      "A、肃清右倾投降主义路线",
+      "B、工农武装割据波浪式推向全国",
+      "C、纠正'左'倾军事冒险计划",
+      "D、开展'打土豪、分田地'的土地革命"
+    ],
+    answer: 3
+  },
+  {
+    question: "23、第五次反'围剿'的失败充分证明了（     ）。",
+    options: [
+      "A、良好的群众基础是红色政权存在的重要条件",
+      "B、全国的革命形势对红色政权的影响巨大",
+      "C、相当力量的正式红军的存在，是造成工农武装割据的重要条件",
+      "D、中国共产党的正确领导是红色政权存在的最重要条件"
+    ],
+    answer: 3
+  },
+  {
+    question: "24、第五次反'围剿'失败的最主要原因是（     ）。",
+    options: [
+      "A、主张'御敌于国门之外'",
+      "B、进攻受挫后采取消极防御方针",
+      "C、'左'倾错误的进一步发展",
+      "D、丧失了与福建十九路军的合作良机"
+    ],
+    answer: 2
+  },
+  {
+    question: "25、井冈山时期，毛泽东提出红色政权存在与发展必须坚持（    ）",
+    options: [
+      "A、武装斗争、土地革命、根据地建设",
+      "B、党的建设、武装斗争、土地革命",
+      "C、党的建设、武装斗争、统一战线",
+      "D、武装斗争、土地革命、统一战线"
+    ],
     answer: 0
   },
   {
-    question: "37. 土地革命战争时期，中国共产党在革命根据地广泛实行的是：",
-    options: ["A. 土地公有", "B. 土地国有", "C. 私有制", "D. 地主经营制"],
+    question: "26、遵义会议后，中共中央政治局成立了三人军事指挥小组，其成员是（   ）。",
+    options: [
+      "A、毛泽东、周恩来、朱德",
+      "B、毛泽东、朱德、邓小平",
+      "C、毛泽东、周恩来、张闻天",
+      "D、周恩来、毛泽东、王稼祥"
+    ],
+    answer: 3
+  },
+  {
+    question: "27、中国共产党认为中国革命的基本问题是（    ）。",
+    options: [
+      "A、农民问题",
+      "B、工人问题",
+      "C、民族资产阶级问题",
+      "D、党的问题"
+    ],
+    answer: 0
+  },
+  {
+    question: "28、中国共产党开创的第一块农村革命根据地是（    ）",
+    options: [
+      "A、晋察冀根据地",
+      "B、井冈山根据地",
+      "C、湘鄂西根据地",
+      "D、鄂豫皖根据地"
+    ],
+    answer: 1
+  },
+  {
+    question: "29、结束王明的'左'倾冒险主义在党中央的统治，确立了毛泽东的领导地位的重要会议是（      ）",
+    options: [
+      "A、八七会议",
+      "B、遵义会议",
+      "C、瓦窑堡会议",
+      "D、中共七大"
+    ],
+    answer: 1
+  },
+  {
+    question: "30、“军叫工农革命，旗号镰刀斧头。地主重重压迫，农民个个同仇。秋收时节幕云愁，霹雳一声暴动”（毛泽东1927年一首词），这首词赞颂的是（  ）",
+    options: [
+      "A、上海工人起义",
+      "B、南昌起义",
+      "C、秋收起义",
+      "D、广州起义"
+    ],
     answer: 2
+  },
+  {
+    question: "31、陈独秀的右倾投降主义和王明“左”倾冒险主义都给中国革命带来严重危害，这两次错误路线产生的根源在于（     ）",
+    options: [
+      "A、共产国际错误指导",
+      "B、错误领导人排挤毛泽东",
+      "C、中共处于幼年时期，理论思想尚不成熟",
+      "D、国民党分化破坏活动"
+    ],
+    answer: 2
+  },
+  {
+    question: "32、南昌起义、秋收起义、广州起义中得出的深刻教训是（    ）",
+    options: [
+      "A、必须武装反抗国民党反动派",
+      "B、必须建立党对军队的绝对领导",
+      "C、必须建立新型的人民军队",
+      "D、走适合中国国情的革命道路"
+    ],
+    answer: 3
+  },
+  {
+    question: "33、八七会议前后，中共发动的几次大规模武装起义均以夺取大城市为目标，这种情况表明（     ）",
+    options: [
+      "A、我党在城市拥有相对强大的革命力量",
+      "B、敌人在某些大城市力量不足",
+      "C、我党的革命道路脱离实际",
+      "D、我党尚未充分认识到农民是革命的动力"
+    ],
+    answer: 2
+  },
+  {
+    question: "34、“红军不怕远征难，万水千山只等闲”。当年红军“远征”的直接原因是（    ）",
+    options: [
+      "A、把革命火种播撒到西部，扩大革命原地",
+      "B、东北沦陷，华北告急！中华民族危机空前",
+      "C、“避其主力，打其虚弱”，集中优势兵力歼灭敌人",
+      "D、红军第五次反围剿失利，被迫实行战略转移"
+    ],
+    answer: 3
+  },
+  {
+    question: "35、1927年下半年，中国革命呈现出的根本趋势是（      ）",
+    options: [
+      "A、中共的工作重心开始由城市转移到农村",
+      "B、中共发动武装起义夺取城市",
+      "C、中共发动了一系列罢工，反对国民党统治",
+      "D、中共党内出现了“左”倾机会主义错误"
+    ],
+    answer: 0
+  },
+  {
+    question: "36、一位美国记者赞叹道：每一场革命都有它自身的传奇，毛泽东率领数万工农红军所完成的战略转移，就是中国革命史上的伟大传奇。他所说的“伟大传奇”是指（    ）",
+    options: [
+      "A、秋收起义",
+      "B、井冈山会师",
+      "C、第五次反围剿",
+      "D、长征"
+    ],
+    answer: 3
+  },
+  {
+    question: "37、“农村包围城市”的革命道路理论，形成于（     ）",
+    options: [
+      "A、国民革命时期（1924-1927 年）",
+      "B、土地革命时期（1927-1937 年）",
+      "C、抗日战争时期（1937-1945 年）",
+      "D、解放战争时期（1946-1949 年）"
+    ],
+    answer: 1
   }
-);
+];
+
 
 
 
@@ -366,7 +420,7 @@ const multiQuiz = [
       "C、在党内斗争和组织问题上，推行宗派主义和“残酷斗争，无情打击”的方针",
       "D、共产国际对中国共产党内部事务错误干预和瞎指挥"
     ],
-    answer: [0, 1, 2, 3]
+    answer: [0, 1,  3]
   },
   {
     question: "4、1927年8月7日，中共中央在汉口秘密召开紧急会议（即八七会议），这次会议的内容是(     )",
@@ -376,7 +430,7 @@ const multiQuiz = [
       "C、选出了以瞿秋白为书记的中央临时政治局",
       "D、开始了从大革命失败到土地革命战争兴起的转折"
     ],
-    answer: [0, 1, 3]
+    answer: [0, 1, 2, 3]
   },
   {
     question: "5、红军长征铸就了伟大的长征精神，长征精神就是（   ）。",
@@ -416,7 +470,7 @@ const multiQuiz = [
       "C、张闻天",
       "D、王稼祥"
     ],
-    answer: [0, 1, 2]
+    answer: [0, 1, 3]
   },
   {
     question: "9、1935年1月，中共中央政治局在贵州遵义召开了遵义会议，这次会议解决了当时最迫切的（    ）。",
@@ -436,7 +490,7 @@ const multiQuiz = [
       "C、贯彻了积极防御的方针",
       "D、实行“诱敌深入”、“避敌主力、打其虚弱”等一整套战术"
     ],
-    answer: [0, 2, 3]
+    answer: [1, 2, 3]
   },
   {
     question: "11、1927年7月大革命失败到1935年1月遵义会议召开之前，“左”倾错误先后三次在党中央的领导机关取得了统治地位，即（    ）",
@@ -466,7 +520,7 @@ const multiQuiz = [
       "C、农民阶级是中国革命的领导阶级",
       "D、没有农民阶级参加，中国革命就不能取胜"
     ],
-    answer: [0, 1, 4] // 注意此题应只有A、B、D三项，选项C不是正确选项；无第4项（index 4），故为 [0, 1, 3]
+    answer: [ 1, 3] // 注意此题应只有A、B、D三项，选项C不是正确选项；无第4项（index 4），故为 [0, 1, 3]
   },
   {
     question: "14、井冈山革命根据地的创建有深远的意义，表现在 （   ）",
@@ -517,7 +571,7 @@ const judgeQuiz = [
   },
   {
     question: "7、中国共产党独立领导革命战争、创建人民军队和武装夺取政权的开端是秋收起义。",
-    answer: true
+    answer: false
   },
   {
     question: "8、新民主主义革命是无产阶级领导的革命，所以中国革命实质上是无产阶级领导的社会主义革命。",
@@ -687,21 +741,21 @@ const judgeQuiz = [
         current++;
         renderQuestion();
       } else {
-        currentType = 'multi';
-        current = 0;
-        renderQuestion();
-      }
-    } else if (currentType === 'multi') {
-      if (current < multiQuiz.length - 1) {
-        current++;
-        renderQuestion();
-      } else {
-        currentType = 'judge';
+        currentType = 'judge'; // 先切换到判断题
         current = 0;
         renderQuestion();
       }
     } else if (currentType === 'judge') {
       if (current < judgeQuiz.length - 1) {
+        current++;
+        renderQuestion();
+      } else {
+        currentType = 'multi'; // 判断题做完再到多选题
+        current = 0;
+        renderQuestion();
+      }
+    } else if (currentType === 'multi') {
+      if (current < multiQuiz.length - 1) {
         current++;
         renderQuestion();
       }
@@ -712,17 +766,16 @@ const judgeQuiz = [
     if (current > 0) {
       current--;
       renderQuestion();
-    } else if (currentType === 'multi') {
+    } else if (currentType === 'judge') {
       currentType = 'single';
       current = quiz.length - 1;
       renderQuestion();
-    } else if (currentType === 'judge') {
-      currentType = 'multi';
-      current = multiQuiz.length - 1;
+    } else if (currentType === 'multi') {
+      currentType = 'judge';
+      current = judgeQuiz.length - 1;
       renderQuestion();
     }
   }
-
   renderQuestion();
 </script>
 
