--- a/6.html
+++ b/6.html
@@ -403,7 +403,7 @@ const quiz = [
       "C、两党得到外部力量帮助",
       "D、中日民族矛盾十分尖锐"
     ],
-    answer: 3
+    answer: 1
   },
   {
     question: "34、中国工农红军取下八角帽，摘下红五星，穿上国民革命军军服，开赴抗日前线应该在（  ）",
@@ -556,7 +556,7 @@ const multiQuiz = [
       "C、针锋相对，寸土必争",
       "D、发展进步势力，中间势力，孤立顽固势力"
     ],
-    answer: [0, 1] // AB
+    answer: [0, 1, 3] // ABD
   },
   {
     question: "7、下列关于皖南事变的表述正确的是（   ）",
@@ -596,7 +596,7 @@ const multiQuiz = [
       "C、实行片面抗战路线",
       "D、国民党政府在军事、政治、经济各方面陷入深刻的危机"
     ],
-    answer: [0, 1, 2, 3] // ABCD
+    answer: [0, 1, 2] // ABC
   },
   {
     question: "11、造成蒋介石既反共又不放弃抗日的因素包括(     )",
@@ -616,7 +616,7 @@ const multiQuiz = [
       "C、从思想上清算了'左'的和右的错误",
       "D、形成了空前的团结和统一"
     ],
-    answer: [0, 2, 3] // ACD
+    answer: [1, 2, 3] // BCD
   },
   {
     question: "13、历史上体现国共合作的事件有(     )",
@@ -696,7 +696,7 @@ const multiQuiz = [
       "C、中国为盟国提供了大量的战略物资和军事情报",
       "D、美英法等国向中国提供了经济援助或军事合作"
     ],
-    answer: [0, 1, 2] // ABC
+    answer: [0, 1, 2, 3] // ABCD
   },
   {
     question: "21、'一二·九'运动与'五·四'运动的共同点是（   ）",
@@ -736,7 +736,7 @@ const multiQuiz = [
       "C、作战方式不同",
       "D、战略地位不同"
     ],
-    answer: [0, 1, 2] // ABC
+    answer: [0, 1, 2, 3] // ABCD
   },
   {
     question: "25、抗日民族统一战线的特点包括(     )",
@@ -756,7 +756,7 @@ const multiQuiz = [
       "C、国民党正面战场的连续败退",
       "D、人民抗日力量还比较弱小"
     ],
-    answer: [0, 1, 3] // ABD
+    answer: [1, 2, 3] // BCD
   }
 ];
 
@@ -981,21 +981,21 @@ const judgeQuiz = [
         current++;
         renderQuestion();
       } else {
-        currentType = 'multi';
-        current = 0;
-        renderQuestion();
-      }
-    } else if (currentType === 'multi') {
-      if (current < multiQuiz.length - 1) {
-        current++;
-        renderQuestion();
-      } else {
-        currentType = 'judge';
+        currentType = 'judge'; // 先切换到判断题
         current = 0;
         renderQuestion();
       }
     } else if (currentType === 'judge') {
       if (current < judgeQuiz.length - 1) {
+        current++;
+        renderQuestion();
+      } else {
+        currentType = 'multi'; // 判断题做完再到多选题
+        current = 0;
+        renderQuestion();
+      }
+    } else if (currentType === 'multi') {
+      if (current < multiQuiz.length - 1) {
         current++;
         renderQuestion();
       }
@@ -1006,13 +1006,13 @@ const judgeQuiz = [
     if (current > 0) {
       current--;
       renderQuestion();
-    } else if (currentType === 'multi') {
+    } else if (currentType === 'judge') {
       currentType = 'single';
       current = quiz.length - 1;
       renderQuestion();
-    } else if (currentType === 'judge') {
-      currentType = 'multi';
-      current = multiQuiz.length - 1;
+    } else if (currentType === 'multi') {
+      currentType = 'judge';
+      current = judgeQuiz.length - 1;
       renderQuestion();
     }
   }
