--- a/8.html
+++ b/8.html
@@ -506,7 +506,7 @@ const multiQuiz = [
       "C、1931年毛泽东和邓子恢等制定了土地革命中的阶级路线和土地分配方法",
       "D、1947年中国共产党制定《中国土地法大纲》"
     ],
-    answer: [0, 1, 3]
+    answer: [0, 1, 2, 3]
   },
   {
     question: "15、有人形象地说南京既是中国近代史的起点，也是中国近代史的终点。下列能够反映这种说法的两个历史片断是",
@@ -617,7 +617,7 @@ const judgeQuiz = [
   },
   {
     question: "12、中国共产党领导的革命，包括旧民主主义革命和新民主主义革命两个阶段。(   )",
-    answer: true
+    answer: false
   },
   {
     question: "13、社会主义改造是围绕着社会主义工业化建设的任务进行的。(     )",
@@ -815,21 +815,21 @@ const judgeQuiz = [
         current++;
         renderQuestion();
       } else {
-        currentType = 'multi';
-        current = 0;
-        renderQuestion();
-      }
-    } else if (currentType === 'multi') {
-      if (current < multiQuiz.length - 1) {
-        current++;
-        renderQuestion();
-      } else {
-        currentType = 'judge';
+        currentType = 'judge'; // 先切换到判断题
         current = 0;
         renderQuestion();
       }
     } else if (currentType === 'judge') {
       if (current < judgeQuiz.length - 1) {
+        current++;
+        renderQuestion();
+      } else {
+        currentType = 'multi'; // 判断题做完再到多选题
+        current = 0;
+        renderQuestion();
+      }
+    } else if (currentType === 'multi') {
+      if (current < multiQuiz.length - 1) {
         current++;
         renderQuestion();
       }
@@ -840,17 +840,16 @@ const judgeQuiz = [
     if (current > 0) {
       current--;
       renderQuestion();
-    } else if (currentType === 'multi') {
+    } else if (currentType === 'judge') {
       currentType = 'single';
       current = quiz.length - 1;
       renderQuestion();
-    } else if (currentType === 'judge') {
-      currentType = 'multi';
-      current = multiQuiz.length - 1;
+    } else if (currentType === 'multi') {
+      currentType = 'judge';
+      current = judgeQuiz.length - 1;
       renderQuestion();
     }
   }
-
   renderQuestion();
 </script>
 
