--- a/index.html
+++ b/index.html
@@ -95,57 +95,57 @@
         <div class="menu">
             <!-- 选项1 -->
             <div class="menu-item">
-                <h2>1.html</h2>
-                <p>第一章</p>
+                <h2>第一章</h2>
+                <p>反对外国侵略的战争</p>
                 <a href="1.html">进入页面</a>
             </div>
 
             <!-- 选项2 -->
             <div class="menu-item">
-                <h2>2.html</h2>
-                <p>第二章</p>
+                <h2>第二章</h2>
+                <p>不同社会力量对国家出路的早期探索</p>
                 <a href="2.html">进入页面</a>
             </div>
 
             <!-- 选项3 -->
             <div class="menu-item">
-                <h2>3.html</h2>
-                <p>这是第三章</p>
+                <h2>第三章</h2>
+                <p>辛亥革命与君主专制制度的终结</p>
                 <a href="3.html">进入页面</a>
             </div>
 
             <!-- 选项4 -->
             <div class="menu-item">
-                <h2>4.html</h2>
-                <p>这是第四章</p>
+                <h2>第四章</h2>
+                <p> 中国共产党成立和中国革命新局面</p>
                 <a href="4.html">进入页面</a>
             </div>
 
             <!-- 选项5 -->
             <div class="menu-item">
-                <h2>5.html</h2>
-                <p>这是第五章</p>
+                <h2>第五章</h2>
+                <p>中国革命的新道路</p>
                 <a href="5.html">进入页面</a>
             </div>
 
             <!-- 选项6 -->
             <div class="menu-item">
-                <h2>6.html</h2>
-                <p>这是第六章</p>
+                <h2>第六章</h2>
+                <p>中华民族的抗日战争</p>
                 <a href="6.html">进入页面</a>
             </div>
 
             <!-- 选项7 -->
             <div class="menu-item">
-                <h2>7.html</h2>
-                <p>这是第七章</p>
+                <h2>第七章</h2>
+                <p> 为建立新中国而奋斗</p>
                 <a href="7.html">进入页面</a>
             </div>
 
             <!-- 选项8 -->
             <div class="menu-item">
-                <h2>8.html</h2>
-                <p>这是第八章</p>
+                <h2>第八章</h2>
+                <p>中华人民共和国的成立与中国社会主义建设道路的探索</p>
                 <a href="8.html">进入页面</a>
             </div>
         </div>
