--- a/1.html
+++ b/1.html
@@ -109,9 +109,9 @@
         margin: 24px 0 0 0;
       }
       .buttons {
-        flex-direction: column;
-        gap: 8px;
-      }
+    flex-direction: row !important;
+    gap: 8px;
+  }
       .buttons button {
         font-size: 1rem;
         padding: 12px 0;
