--- a/2.html
+++ b/2.html
@@ -45,18 +45,123 @@
       margin: 32px auto 0 auto;
       background: linear-gradient(to right, #4a00e0, #8e2de2);
       color: white;
+      border: n<head>
+  <meta charset="UTF-8" />
+  <title>近现代史刚要第一章</title>
+  <!-- 新增viewport适配 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <style>
+    body { font-family: sans-serif; margin: 0; background: #f8f8f8; }
+    .modal {
+      position: fixed; top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      background: white; padding: 20px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      width: 400px; border-radius: 10px;
+      max-width: 95vw;
+      box-sizing: border-box;
+    }
+    .option {
+      margin: 8px 0;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: background 0.2s, color 0.2s;
+      text-align: left;
+      word-break: break-all;
+    }
+    .option.selected {
+      background-color: #444 !important;
+      color: #fff !important;
+      border-color: #444 !important;
+    }
+    .option.correct {
+      background-color: #43a047 !important;
+      color: #fff !important;
+      border-color: #43a047 !important;
+    }
+    .option.wrong {
+      background-color: #ffcaca;
+    }
+    .buttons {
+      margin-top: 20px;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+    .buttons button {
+      flex: 1 1 30%;
+      min-width: 80px;
+      font-size: 1rem;
+      padding: 10px 0;
+      margin: 0 2px;
+      border-radius: 8px;
       border: none;
-      padding: 12px 25px;
-      border-radius: 15px;
-      font-size: 0.7rem;
-      font-weight: 300;
+      background: #4a00e0;
+      color: #fff;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    .buttons button:hover {
+      background: #8e2de2;
+    }
+    .multi-submit-btn {
+      display: block;
+      margin: 32px auto 0 auto;
+      background: linear-gradient(to right, #4a00e0, #8e2de2);
+      color: white;
+      border: none;
+      padding: 18px 60px;
+      border-radius: 50px;
+      font-size: 1.3rem;
+      font-weight: 700;
       cursor: pointer;
       transition: all 0.3s;
       box-shadow: 0 4px 15px rgba(142, 45, 226, 0.2);
+      max-width: 100%;
+      width: 90%;
     }
     .multi-submit-btn:disabled {
       opacity: 0.6;
       cursor: not-allowed;
+    }
+    /* 响应式适配手机 */
+    @media (max-width: 600px) {
+      .modal {
+        width: 98vw;
+        min-width: unset;
+        padding: 10px;
+        border-radius: 0;
+        top: 0;
+        left: 0;
+        transform: none;
+        height: 100vh;
+        max-width: 100vw;
+        box-shadow: none;
+        overflow-y: auto;
+      }
+      .option {
+        font-size: 1rem;
+        padding: 12px 8px;
+      }
+      .multi-submit-btn {
+        font-size: 1.1rem;
+        padding: 14px 0;
+        width: 100%;
+        margin: 24px 0 0 0;
+      }
+      .buttons {
+    flex-direction: row !important;
+    gap: 8px;
+  }
+      .buttons button {
+        font-size: 1rem;
+        padding: 12px 0;
+        margin: 0;
+      }
     }
   </style>
 </head>
