--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
                 <h2>第八章</h2>
                 <p>中华人民共和国的成立与中国社会主义建设道路的探索</p>
                 <a href="8.html">进入页面</a>
+            </div>、
+              <!-- 选项8 -->
+            <div class="menu-item">
+                <h2>模拟题2</h2>
+                <p>test2</p>
+                <a href="8.html">进入页面</a>
             </div>
         </div>
 
